--- a/templates/produits/WagonsFret/Bache/WFBacheZ.html.twig
+++ b/templates/produits/WagonsFret/Bache/WFBacheZ.html.twig
@@ -11,28 +11,19 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<link rel="stylesheet" href="{{ asset('CSS/Carrousel.css') }}">
 			<link rel="stylesheet" href="{{ asset('CSS/ProduitWF.css') }}">
-			<title>Wagon de Fret Bache Taille G</title>
+			<title>Wagon de Fret Bache Taille Z</title>
 		</head>
 
 		<body>
 				<div
 					class="titre">
 					<a href={{ path('TypeProduit_WagonFret') }}>Retour vers les types de Wagons de Fret</a>
-					{% for Produits in WFBacheG %}
+					{% for Produits in WFBacheZ %}
 						<h1>{{Produits.NomProduit}}</h1>
 					</div>
-					<main>
-						<div id="carrousel">
-							<figure>
-								<img src={{ asset('images/Produits/WagonFret/Bache/TailleG/') ~ Produits.vue1 }} alt="WagonFretBacheTailleGVue1" id="WagonFretBacheTailleGVue1">
-							</figure>
-							<figure>
-								<img src={{ asset('images/Produits/WagonFret/Bache/TailleG/') ~ Produits.vue2 }} alt="WagonFretBacheTailleGVue2" id="WagonFretBacheTailleGVue2">
-							</figure>
-						</div>
-					</main>
-					<div class="WFBacheTailleG">
-						<div class="droiteGBache">
+					<div class="WFBacheTailleZ">
+								<img src={{ asset('images/Produits/WagonFret/Bache/TailleZ/') ~ Produits.vue1 }} alt="WagonFretBacheTailleHOvue1" id="WagonFretBacheTailleHOvue1">
+						<div class="droiteZBache">
 							<p>
 								Prix unitaire :
 								{{Produits.prix}}
@@ -49,7 +40,7 @@
 							{% endif %}
 						</div>
 					</div>
-					<div class="descriptionGBache">
+					<div class="descriptionZBache">
 						<p>
 							<span class="titre_description">Description du Produit :</span>
 							<br>
