--- a/templates/produits/WagonsFret/Couvert/WFCouvertG.html.twig
+++ b/templates/produits/WagonsFret/Couvert/WFCouvertG.html.twig
@@ -11,28 +11,31 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<link rel="stylesheet" href="{{ asset('CSS/Carrousel.css') }}">
 			<link rel="stylesheet" href="{{ asset('CSS/ProduitWF.css') }}">
-			<title>Wagon de Fret Bache Taille G</title>
+			<title>Wagon de Fret Couvert Taille G</title>
 		</head>
 
 		<body>
 				<div
 					class="titre">
 					<a href={{ path('TypeProduit_WagonFret') }}>Retour vers les types de Wagons de Fret</a>
-					{% for Produits in WFBacheG %}
+					{% for Produits in WFCouvertG %}
 						<h1>{{Produits.NomProduit}}</h1>
 					</div>
 					<main>
 						<div id="carrousel">
 							<figure>
-								<img src={{ asset('images/Produits/WagonFret/Bache/TailleG/') ~ Produits.vue1 }} alt="WagonFretBacheTailleGVue1" id="WagonFretBacheTailleGVue1">
+								<img src={{ asset('images/Produits/WagonFret/Couvert/TailleG/') ~ Produits.vue1 }} alt="WagonFretCouvertTailleGVue1" id="WagonFretCouvertTailleGVue1">
 							</figure>
 							<figure>
-								<img src={{ asset('images/Produits/WagonFret/Bache/TailleG/') ~ Produits.vue2 }} alt="WagonFretBacheTailleGVue2" id="WagonFretBacheTailleGVue2">
+								<img src={{ asset('images/Produits/WagonFret/Couvert/TailleG/') ~ Produits.vue2 }} alt="WagonFretCouvertTailleGVue2" id="WagonFretCouvertTailleGVue2">
+							</figure>
+							<figure>
+								<img src={{ asset('images/Produits/WagonFret/Couvert/TailleG/') ~ Produits.vue3 }} alt="WagonFretCouvertTailleGVue3" id="WagonFretCouvertTailleGVue3">
 							</figure>
 						</div>
 					</main>
-					<div class="WFBacheTailleG">
-						<div class="droiteGBache">
+					<div class="WFCouvertTailleG">
+						<div class="droiteGCouvert">
 							<p>
 								Prix unitaire :
 								{{Produits.prix}}
@@ -49,7 +52,7 @@
 							{% endif %}
 						</div>
 					</div>
-					<div class="descriptionGBache">
+					<div class="descriptionGCouvert">
 						<p>
 							<span class="titre_description">Description du Produit :</span>
 							<br>
