--- a/templates/materiel_roulant/matRoulants.html.twig
+++ b/templates/materiel_roulant/matRoulants.html.twig
@@ -26,11 +26,11 @@
                 </section>
                 <section class="imageBas">
 					<div class="automotrices">
-						<a href="#"><img src={{ asset('Images/MaterielRoulant/') ~ categorie.image1 }} alt="Automotrices" id="automotrices"></a> {# href={{path('acceuil_index')}} => chemin pour redirection#}
+						<a href={{path('TypeProduit_Automotrices')}}><img src={{ asset('Images/MaterielRoulant/') ~ categorie.image1 }} alt="Automotrices" id="automotrices"></a> {# href={{path('acceuil_index')}} => chemin pour redirection#}
 						<p>Les Automotrices</p>
 					</div>
 					<div class="VoituresVoyageurs">
-						<a href="#"><img src={{ asset('Images/MaterielRoulant/') ~ categorie.image3 }} alt="VV" id"VoituresVoyageurs"></a> {# href={{path('acceuil_index')}} => chemin pour redirection#}
+						<a href={{path('TypeProduit_WagonFret')}}><img src={{ asset('Images/MaterielRoulant/') ~ categorie.image3 }} alt="VV" id"VoituresVoyageurs"></a> {# href={{path('acceuil_index')}} => chemin pour redirection#}
 						<p>Les Voitures de Voyageurs</p>
 					</div>
                 </section>
