--- a/templates/TypeProduits/WagonFret.html.twig
+++ b/templates/TypeProduits/WagonFret.html.twig
@@ -9,7 +9,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ asset('CSS/TypeWF.css') }}">
+    <link rel="stylesheet" href="{{ asset('CSS/TypeProduits.css') }}">
     <title>Les Wagons Fret</title>
 </head>
 {% for categorie in NomCategorie %}
