ajout de page produits automotrices

--- a/templates/materiel_roulant/matRoulants.html.twig
+++ b/templates/materiel_roulant/matRoulants.html.twig
@@ -30,7 +30,7 @@
 						<p>Les Automotrices</p>
 					</div>
 					<div class="VoituresVoyageurs">
-						<a href={{path('TypeProduit_WagonFret')}}><img src={{ asset('Images/MaterielRoulant/') ~ categorie.image3 }} alt="VV" id"VoituresVoyageurs"></a> {# href={{path('acceuil_index')}} => chemin pour redirection#}
+						<a href={{path('TypeProduit_Automotrices')}}><img src={{ asset('Images/MaterielRoulant/') ~ categorie.image3 }} alt="VV" id"VoituresVoyageurs"></a> {# href={{path('acceuil_index')}} => chemin pour redirection#}
 						<p>Les Voitures de Voyageurs</p>
 					</div>
                 </section>
