--- a/templates/TypeProduits/automotrices.html.twig
+++ b/templates/TypeProduits/automotrices.html.twig
@@ -19,15 +19,15 @@
     {% for pageproduit in Autorails %}
             <div class="ImagesLigne1">
                 <div class="AutorailsG">
-                    <a href={{ path('produits_dieselG') }}> <img src={{ asset('Images/PageProduits/Autorails/') ~ pageproduit.tailleG }} alt="AutorailsG" id="AutorailsG"></a>
+                    <a href={{ path('produits_autorailsG') }}> <img src={{ asset('Images/PageProduits/Autorails/') ~ pageproduit.tailleG }} alt="AutorailsG" id="AutorailsG"></a>
                     <p>Autorails taille G</p>
                 </div>
                 <div class="AutorailsN">
-                    <a href={{ path('produits_dieselN') }}> <img src={{ asset('Images/PageProduits/Autorails/') ~ pageproduit.tailleN }} alt="AutorailsN" id="AutorailsN"></a>
+                    <a href={{ path('produits_autorailsN') }}> <img src={{ asset('Images/PageProduits/Autorails/') ~ pageproduit.tailleN }} alt="AutorailsN" id="AutorailsN"></a>
                     <p>Autorails taille N</p>
                 </div>
                 <div class="AutorailsHO">
-                    <a href={{ path('produits_dieselZ') }}> <img src={{ asset('Images/PageProduits/Autorails/') ~ pageproduit.tailleHo }} alt="AutorailsHO" id="AutorailsHO"></a>
+                    <a href={{ path('produits_autorailsHO') }}> <img src={{ asset('Images/PageProduits/Autorails/') ~ pageproduit.tailleHo }} alt="AutorailsHO" id="AutorailsHO"></a>
                     <p>Autorails taille HO</p>
                 </div>
             </div>
@@ -35,11 +35,11 @@
                 {% for pageproduit in TGV %}
             <div class="ImagesLigne2">
                 <div class="TGVHO">
-                    <a href={{ path('produits_ElecG') }}> <img src={{ asset('Images/PageProduits/TGV/') ~ pageproduit.tailleHo }} alt="TGVHO" id="TGVHO"></a>
+                    <a href={{ path('produits_TGVHO') }}> <img src={{ asset('Images/PageProduits/TGV/') ~ pageproduit.tailleHo }} alt="TGVHO" id="TGVHO"></a>
                     <p>TGV en Taille HO</p>
                 </div>
                 <div class="TGVN">
-                    <a href={{ path('produits_ElecN') }}> <img src={{ asset('Images/PageProduits/TGV/') ~ pageproduit.tailleN }} alt="TGVN" id="TGVN"></a>
+                    <a href={{ path('produits_TGVN') }}> <img src={{ asset('Images/PageProduits/TGV/') ~ pageproduit.tailleN }} alt="TGVN" id="TGVN"></a>
                     <p>TGV taille N</p>
                 </div>
             </div>
