ajout des pages produits infra ferroviaires

--- a/templates/produits/Automotrices/TGV/TGVHO.html.twig
+++ b/templates/produits/Automotrices/TGV/TGVHO.html.twig
@@ -17,7 +17,7 @@
 		<body>
 			<div
 				class="titre">
-				<a href={{ path('TypeProduit_Automotrices') }}>Retour vers les types de locomotives</a>
+				<a href={{ path('TypeProduit_Automotrices') }}>Retour vers les types de TGV</a>
 				{% for Produits in TGVHO %}
 					<h1>{{Produits.NomProduit}}</h1>
 				</div>
