--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -17,7 +17,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Tailles existantes</a>
+          <a class="nav-link text-white" href={{path('TypeProduit_Infrastructures')}}>Tailles existantes</a>
         </li>
 
         <li class="nav-item">
@@ -25,7 +25,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Les Infrastructures Ferroviaires</a>
+          <a class="nav-link text-white" href={{path('TypeProduit_Infrastructures')}}>Les Infrastructures Ferroviaires</a>
         </li>
       </ul>
 
