--- a/templates/produits/Automotrices/Autorails/AutorailsN.html.twig
+++ b/templates/produits/Automotrices/Autorails/AutorailsN.html.twig
@@ -17,7 +17,7 @@
 		<body>
 			<div
 				class="titre">
-				<a href={{ path('TypeProduit_Automotrices') }}>Retour vers les types de locomotives</a>
+				<a href={{ path('TypeProduit_Automotrices') }}>Retour vers les types d'automotrices'</a>
 				{% for Produits in AutorailsN %}
 					<h1>{{Produits.NomProduit}}</h1>
 				</div>
