ajout de pages produits et types des voies

--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -21,7 +21,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Les Voies</a>
+          <a class="nav-link text-white" href={{path('TypeProduit_Voies')}}>Les Voies</a> 
         </li>
 
         <li class="nav-item">
