debut de l'ajout du formulaire d'inscription

--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -55,7 +55,7 @@
             <a class="btn btn-outline-light me-2" href="#">Se connecter</a>
           </li>
           <li class="nav-item">
-            <a class="btn btn-light text-primary" href="#">S'inscrire</a>
+            <a class="btn btn-light text-primary" href={{path('Utilisateur_Inscription')}}>S'inscrire</a>
           </li>
         {% endif %}
       </ul>
