--- a/templates/utilisateurs/FormInscription.html.twig
+++ b/templates/utilisateurs/FormInscription.html.twig
@@ -1,18 +1,31 @@
 {% extends 'base.html.twig' %}
+ {% block title %}Inscription{% endblock %}
 {% block body %}
-   <link rel="stylesheet" href="{{ asset('CSS/Inscription.css') }}">
+    <link rel="stylesheet" href="{{ asset('CSS/Utilisateurs.css') }}">
     <title>Inscription</title>
 
-
-
-    <!-- Body -->
-  <div class="FormulaireInscription">
+    <div class="FormulaireInscription">
         <h1>Formulaire d'inscription</h1>
-        {{form(f)}}
-         <p>Votre Mot de Passe doit contenir au moins une majuscule, <br>
-         une minuscule et un chiffre. <br>
-         Il doit être composé d'au moins 12 caractères. <br>
-         Il ne doit pas être composer de caractères spéciaux.</p>
-    </div>
 
+        {{ form_start(f, { attr: { id: 'inscription_utilisateur_form' } }) }}
+            {{ form_row(f.civilite) }}
+            {{ form_row(f.nom) }}
+            {{ form_row(f.prenom) }}
+            {{ form_row(f.date_naissance) }}
+            {{ form_row(f.adresse) }}
+            {{ form_row(f.cp) }}
+            {{ form_row(f.ville) }}
+            {{ form_row(f.telephone) }}
+            {{ form_row(f.email) }}
+            {{ form_row(f.login) }}
+            {{ form_row(f.password) }}
+
+            <p class="password-hint">
+                Votre mot de passe doit contenir au moins une majuscule, une minuscule et un chiffre.<br>
+                Il doit comporter au moins 12 caractères et ne pas contenir de caractères spéciaux.
+            </p>
+
+            {{ form_row(f.save) }}
+        {{ form_end(f) }}
+    </div>
 {% endblock %}
