--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -1,6 +1,6 @@
 <footer class="footer">
   <ul class="footer-links">
-    <li><a href="#">Contact</a></li>
+    <li><a href={{path('Utilisateur_contact')}}>Contact</a></li>
     <li><a href="#">Mentions Légales</a></li>
     <li><a href="#">Conditions générale de vente</a></li>
     <li><a href="#">Conditions de Remboursement</a></li>
